frontend/test/should_pass/matchingexample.grg
#using "matchingexample.gm"

rule r(a:Node) : (Node, int)
{
	a --> b:Node;
	p:P(b --- yield d);
	optional o {
		a --> . --> c:N;
	---
		yield { yield i = c.i; }
		
		modify {
		}
	}
---	
	def var i:int;
	def d:Node;
	
	modify {
		b --> u:Node;
		return(d, i);
	}
}

pattern P(n:Node --- def rm:Node)
{
	n --> . --> m:Node;
---
	yield { yield rm = m; }
}
